<resources>
    <string name="app_name">Flymora</string>
    <string-array name="init_array_titles">
        <item>Добро пожаловать</item>
        <item>Авиабилеты</item>
        <item>Отели</item>
        <item>Маршруты</item>
    </string-array>
    <string-array name="init_array_texts">
        <item>Откройте для себя удобный и продуманный планировщик путешествий. Мы поможем собрать всё в одном месте! </item>
        <item>Легко выбирайте и бронируйте лучшие авиабилеты для вашего маршрута</item>
        <item>Найдите и забронируйте идеальное жилье, от уютных хостелов до роскошных отелей</item>
        <item>Исследуйте город с нами: концерты, выставки, парки, памятники, рестораны и многое другое для вашего идеального отдыха!</item>
    </string-array>

    <string-array name="init_array_buttons">
        <item>Далее</item>
        <item>Начать</item>
    </string-array>

    <string name="init_title_1">Добро пожаловать</string>
    <string name="init_title_2">Авиабилеты</string>
    <string name="init_title_3">Отели</string>
    <string name="init_title_4">Маршруты</string>

    <string name="init_text_1">Откройте для себя удобный и продуманный планировщик путешествий. Мы поможем собрать всё в одном месте! </string>
    <string name="init_text_2">Легко выбирайте и бронируйте лучшие авиабилеты для вашего маршрута</string>
    <string name="init_text_3">Найдите и забронируйте идеальное жилье, от уютных хостелов до роскошных отелей</string>
    <string name="init_text_4">Исследуйте город с нами: концерты, выставки, парки, памятники, рестораны и многое другое для вашего идеального отдыха!</string>

    <string name="init_button_next">Далее</string>
    <string name="init_button_start">Начать</string>


    <string name="flight_tickets_arrival_place_title">Куда:</string>
    <string name="flight_tickets_departure_place_title">Откуда:</string>

    <string name="flight_tickets_country_search_title">Выберите страну</string>
    <string name="flight_tickets_hint_country_search">Введите страну для поиска</string>
    <string name="flight_tickets_country_search_button_text">Нажмите, чтобы выбрать страну</string>

    <string name="flight_tickets_city_search_title">Выберите город</string>
    <string name="flight_tickets_hint_city_search">Введите город для поиска</string>
    <string name="flight_tickets_city_search_button_text">Нажмите, чтобы выбрать город</string>


    <string name="flight_tickets_airport_search_title">Выберите аэропорт</string>
    <string name="flight_tickets_hint_airport_search">Введите аэропорт для поиска</string>
    <string name="flight_tickets_airport_search_button_text">Нажмите, чтобы выбрать аэропорт</string>

    <string name="titleTextFlightLocations">Место вылета и прилета</string>
    <string name="titleTextChoseDate">Выберите даты</string>
    <string name="textFlightThere">Туда</string>
    <string name="hintTypeDate">Выберите дату</string>
    <string name="buttonFlightTextDate">Нажмите, чтобы выбрать дату</string>
    <string name="textFlightReturn">Обратно</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="textFlightTicketCost">Стоимость</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>