<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.flight.FlightArrivalFragment">



        <TextView
            android:id="@+id/arrivalTitleText"
            android:text="@string/flight_tickets_arrival_place_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/roboto_medium"/>

        <TextView
            android:id="@+id/countryArrivalTitleText"
            android:text="@string/flight_tickets_country_search_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arrivalTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/roboto_medium"/>


        <android.widget.Button
            android:id="@+id/countryArrivalLocationPickerButtonFlightTickets"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryArrivalTitleText"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:text="@string/flight_tickets_country_search_button_text"
            android:gravity="start"
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:paddingVertical="13dp"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:background="@drawable/share_rounded_picker_location_button"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCountryArrivalSearchField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryArrivalTitleText"
            android:background="@drawable/share_rounded_flight_tickets_country_search_container"
            android:visibility="gone">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/editTextSearchCountryArrival"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextSearchCountryArrival"
                app:srcCompat="@drawable/flight_tickets_return_country_search_field_button" />

            <EditText
                android:id="@+id/editTextSearchCountryArrival"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginStart="52dp"
                android:hint="@string/flight_tickets_hint_country_search"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                android:height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/clearCountryArrivalSearchFieldButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"

                app:layout_constraintBottom_toBottomOf="@+id/editTextSearchCountryArrival"
                app:layout_constraintStart_toEndOf="@+id/editTextSearchCountryArrival"
                app:layout_constraintTop_toTopOf="@+id/editTextSearchCountryArrival"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/flight_tickets_clear_country_search_field_button" />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/layoutDividerCountryArrival"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/editTextSearchCountryArrival"/>

            <ListView
                android:id="@+id/countryArrivalListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="25dp"

                app:layout_constraintTop_toBottomOf="@+id/layoutDividerCountryArrival" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/cityArrivalTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/flight_tickets_city_search_title"
            android:textSize="23sp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryArrivalLocationPickerButtonFlightTickets"
            android:visibility="gone"/>

        <android.widget.Button
            android:id="@+id/cityArrivalLocationPickerButtonFlightTickets"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityArrivalTitleText"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:text="@string/flight_tickets_city_search_button_text"
            android:gravity="start"
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:paddingVertical="13dp"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:background="@drawable/share_rounded_picker_location_button"
            android:visibility="gone"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCityArrivalSearchField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityArrivalTitleText"
            android:background="@drawable/share_rounded_flight_tickets_country_search_container"
            android:visibility="gone">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/editTextSearchCityArrival"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextSearchCityArrival"
                app:srcCompat="@drawable/flight_tickets_return_country_search_field_button" />

            <EditText
                android:id="@+id/editTextSearchCityArrival"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginStart="52dp"
                android:hint="@string/flight_tickets_hint_city_search"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                android:height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/clearCityArrivalSearchFieldButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"

                app:layout_constraintBottom_toBottomOf="@+id/editTextSearchCityArrival"
                app:layout_constraintStart_toEndOf="@+id/editTextSearchCityArrival"
                app:layout_constraintTop_toTopOf="@+id/editTextSearchCityArrival"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/flight_tickets_clear_country_search_field_button" />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/layoutDividerCityArrival"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/editTextSearchCityArrival"/>

            <ListView
                android:id="@+id/cityArrivalListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutDividerCityArrival" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/airportArrivalTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/flight_tickets_city_search_title"
            android:textSize="23sp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityArrivalLocationPickerButtonFlightTickets"
            android:visibility="gone"/>

        <android.widget.Button
            android:id="@+id/airportArrivalLocationPickerButtonFlightTickets"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/airportArrivalTitleText"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:text="@string/flight_tickets_city_search_button_text"
            android:gravity="start"
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:paddingVertical="13dp"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:background="@drawable/share_rounded_picker_location_button"
            android:visibility="gone"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutAirportArrivalSearchField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/airportArrivalTitleText"
            android:background="@drawable/share_rounded_flight_tickets_country_search_container"
            android:visibility="gone">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/editTextSearchAirportArrival"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextSearchAirportArrival"
                app:srcCompat="@drawable/flight_tickets_return_country_search_field_button" />

            <EditText
                android:id="@+id/editTextSearchAirportArrival"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginStart="52dp"
                android:hint="@string/flight_tickets_hint_city_search"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                android:height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/clearAirportArrivalSearchFieldButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"

                app:layout_constraintBottom_toBottomOf="@+id/editTextSearchAirportArrival"
                app:layout_constraintStart_toEndOf="@+id/editTextSearchAirportArrival"
                app:layout_constraintTop_toTopOf="@+id/editTextSearchAirportArrival"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/flight_tickets_clear_country_search_field_button" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/layoutDividerAirportArrival"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/editTextSearchAirportArrival"/>

            <ListView
                android:id="@+id/airportArrivalListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutDividerAirportArrival" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

